--- a/typeorm-jwt-swagger-example/package.json
+++ b/typeorm-jwt-swagger-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleanest-presentation",
+  "name": "typeorm-jwt-swagger-example",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,11 +22,19 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.7.8",
+    "@nestjs/typeorm": "^7.1.5",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
