--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "aws-sdk": "^2.814.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
     "mysql": "^2.18.1",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "sqs-consumer": "^5.5.0",
+    "swagger-ui-express": "^4.1.5",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
