--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ APP_PORT=3333
 JWT_ISSUER=witi-example
 JWT_SECRET=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
 JWT_EXP=9999
-DB_RR_HOST=127.0.0.1
-DB_RR_PORT=5432
-DB_RR_USERNAME=root
-DB_RR_PASSWORD=root
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USERNAME=root
+DB_PASSWORD=root
 AWS_ACCESS_KEY_ID=AKIAVGNC7EE7U4AI6QKR
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=us-east-1
