process order ok

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_PORT=3333
+APP_PORT=3030
 JWT_ISSUER=witi-example
 JWT_SECRET=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
 JWT_EXP=9999
@@ -12,7 +12,7 @@ AWS_REGION=us-east-1
 AWS_TOPIC_BASE_NAME=arn:aws:sqs:us-east-1:357360935231:
 AWS_QUEUE_NAME=beer-process-order
 PROCESS_ORDER_TOPIC=arn:aws:sns:us-east-1:357360935231:beer-process-order
-
+TYPEORM_SYNC=true
 
 
 
