--- a/.consumer.env
+++ b/.consumer.env
@@ -2,10 +2,10 @@ export APP_PORT=3333
 export JWT_ISSUER=witi-example
 export JWT_SECRET=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
 export JWT_EXP=9999
-export DB_RR_HOST=127.0.0.1
-export DB_RR_PORT=3306
-export DB_RR_USERNAME=root
-export DB_RR_PASSWORD=root
+export DB_HOST=127.0.0.1
+export DB_PORT=5432
+export DB_USERNAME=root
+export DB_PASSWORD=root
 export AWS_ACCESS_KEY_ID=AKIAVGNC7EE7U4AI6QKR
 export AWS_SECRET_ACCESS_KEY=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
 export AWS_REGION=us-east-1
