remove aws creds

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=root
 DB_PASSWORD=root
-AWS_ACCESS_KEY_ID=AKIAVGNC7EE7U4AI6QKR
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 AWS_TOPIC_BASE_NAME=arn:aws:sqs:us-east-1:357360935231:
 AWS_QUEUE_NAME=beer-process-order
