--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "up:db:daemon": "docker-compose -f database/docker-compose.yml up -d "
+    "up:db:daemon": "docker-compose -f database/docker-compose.yml up -d ",
+    "down:db:daemon": "docker-compose -f database/docker-compose.yml down",
+    "start:consumer": "node dist/cli.js appType=consumer method=ProcessOrderConsumer"
   },
   "husky": {
     "hooks": {
