--- a/.consumer.env
+++ b/.consumer.env
@@ -1,17 +1,17 @@
 export APP_PORT=3333
 export JWT_ISSUER=witi-example
-export JWT_SECRET=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
-export JWT_EXP=9999
+export JWT_SECRET_KEY=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
+export JWT_EXPIRATION=9999
 export DB_HOST=127.0.0.1
 export DB_PORT=5432
 export DB_USERNAME=root
 export DB_PASSWORD=root
-export AWS_ACCESS_KEY_ID=AKIAVGNC7EE7U4AI6QKR
-export AWS_SECRET_ACCESS_KEY=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
+export AWS_ACCESS_KEY_ID=
+export AWS_SECRET_ACCESS_KEY=
 export AWS_REGION=us-east-1
 export AWS_TOPIC_BASE_NAME=arn:aws:sqs:us-east-1:357360935231:
-export AWS_QUEUE_NAME=process-order
-export PROCESS_ORDER_TOPIC=arn:aws:sns:us-east-1:357360935231:process-order
+export AWS_QUEUE_NAME=beer-process-order
+export PROCESS_ORDER_TOPIC=arn:aws:sns:us-east-1:357360935231:beer-process-order
 
 
 
