--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_PORT=3033
 JWT_ISSUER=witi-example
-JWT_SECRET=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
-JWT_EXP=9999
+JWT_SECRET_KEY=hwZzpafjyoRQeQ8gKPg77ENNW18eonK4
+JWT_EXPIRATION=9999
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=root
