--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
     "mysql": "^2.18.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
